fix du thu in backend voucher payment